# osbox

./: .dockerignore  .gitignore  Dockerfile  README.md  build.py  main.py  osbox-onefile.spec  osbox.spec  pyproject.toml
src/osbox/: __init__.py  cli.py  command.py  manifest.json  manifest.py  wsgi.py
src/osbox/cmd/: asset.py  check_http.py  enable_wal.py  version.py
