[project]
name = "osbox"
version = "1.0.0"
description = "A single-binary OpenStack distribution"
readme = "README.md"
authors = [
    { name = "rackcat-io", email = "241015435+rackcat-io@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "gunicorn>=23.0.0",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
